--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="estilo/style.css" />
 
     <title>Document</title>
 </head>
@@ -38,7 +39,7 @@
         document.write(
             '<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br'
         )
-        document.write('<footer>Meu portifolio - Versão 0.002</footer>')
+        document.write('<footer>Meu portifolio - Versão 0.0002</footer>')
     </script>
 </body>
 
