--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         document.write(
             '<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br'
         )
-        document.write('<footer>Meu portifolio - Versão 0.0002</footer>')
+        document.write('<foo</footer>')
     </script>
+
+    <footer>Meu portifolio versão 0.0002</footer>
 </body>
 
 </html>
