--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         document.write('<foo</footer>')
     </script>
 
-    <footer>Meu portifolio versão 0.0002</footer>
+    <footer>Meu Portifolio Versão 0.0002</footer>
 </body>
 
 </html>
