--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h3>
+    <h3 style="color: #fff; font-family: Verdana, Geneva, Tahoma, sans-serif">
         Legal que voce chegou aqui. Eu sei que a página tá feia, não repare, estou praticando lógica, kkk.
         <p>Aproveita e tire um tempinho para um ciclo de POMODORO.</p>
         <p>Vamos no velho e bom joguinho de acertar o numero esse tá fácil, é</p>
